<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_layout"
    android:orientation="vertical">

    <LinearLayout
        style="@style/wrap_layout"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:src="@color/gray" />

        <LinearLayout
            style="@style/wrap_layout"
            android:orientation="vertical">

            <LinearLayout
                style="@style/default_layout"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/wrap_layout"
                    android:text="@string/product_name"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_item_name"
                    style="@style/wrap_layout"
                    android:text="@string/name"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                style="@style/default_layout"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView

                    style="@style/wrap_layout"
                    android:text="@string/product_price"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_item_price"
                    style="@style/wrap_layout"
                    android:layout_marginStart="10dp"
                    android:text="@string/price"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                style="@style/default_layout"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/wrap_layout"
                    android:text="@string/status"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_item_status"
                    style="@style/wrap_layout"
                    android:layout_marginStart="10dp"
                    android:text="@string/stats"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                style="@style/default_layout"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView

                    style="@style/wrap_layout"
                    android:text="@string/product_scale"
                    android:textSize="12sp" />

                <TextView
                    style="@style/wrap_layout"
                    android:text="@string/_1_64"
                    android:textSize="12sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/description"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/desc"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="50dp"
            android:backgroundTint="@color/maroongradient"
            android:text="@string/buy" />

        <Button
            android:id="@+id/btn_fav"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:backgroundTint="@color/maroongradient"
            android:text="@string/favorite" />

    </LinearLayout>


</LinearLayout>